fix: Prevent ResizeManager from being clicked on safari, fix playerresize on firefox (#5522)
Move the ResizeManager behind the video element with negative z-index and remove visibility: hidden. This fixes issue where right click event wasn't triggered on the correct element and resize was not happening on firefox.

--- a/src/css/video-js.scss
+++ b/src/css/video-js.scss
@@ -50,5 +50,5 @@
   width: 100%;
   height: 100%;
   border: none;
-  visibility: hidden;
+  z-index: -1000;
 }
